# event_stream

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
bolt_api/: token_manager.py
services/: kafka_consumer.py  kafka_producer.py
