[project]
name = "event_stream"
version = "0.1.0"
description = "Event streaming service"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "attrs==25.3.0",
    "bcrypt==4.2.1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloud-sql-python-connector==1.16.0",
    "cryptography==44.0.2",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email_validator==2.2.0",
    "fastapi==0.115.8",
    "frozenlist==1.5.0",
    "google-auth==2.38.0",
    "h11==0.14.0",
    "idna==3.10",
    "multidict==6.2.0",
    "propcache==0.3.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "PyMySQL==1.1.1",
    "python-jose==3.3.0",
    "pytz==2025.1",
    "requests==2.32.3",
    "rsa==4.9",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.38",
    "starlette==0.45.3",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "yarl==1.18.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["event_stream", "bolt_api"] 